LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/AC_COLL_TAX_DT__x.object-meta.xml
<CustomObject>
    <description>AC_COLL_TAX_DT</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>AC_COLL_TAX_DT</externalName>
    <label>AC_COLL_TAX_DT</label>
    <pluralLabel>AC_COLL_TAX_DT</pluralLabel>
</CustomObject>