LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/BASE_CURR_TAX__c.field-meta.xml
<CustomField>
    <fullName>BASE_CURR_TAX__c</fullName>
    <description>BASE_CURR_TAX</description>
    <externalDeveloperName>BASE_CURR_TAX</externalDeveloperName>
    <label>BASE_CURR_TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>