LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/CHARGE_MAPP_AID__c.field-meta.xml
<CustomField>
    <fullName>CHARGE_MAPP_AID__c</fullName>
    <description>CHARGE_MAPP_AID</description>
    <externalDeveloperName>CHARGE_MAPP_AID</externalDeveloperName>
    <label>CHARGE_MAPP_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>