LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/CHARGE_NO__c.field-meta.xml
<CustomField>
    <fullName>CHARGE_NO__c</fullName>
    <description>CHARGE_NO</description>
    <externalDeveloperName>CHARGE_NO</externalDeveloperName>
    <label>CHARGE_NO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>