LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/COLL_AID__c.field-meta.xml
<CustomField>
    <fullName>COLL_AID__c</fullName>
    <description>COLL_AID</description>
    <externalDeveloperName>COLL_AID</externalDeveloperName>
    <label>COLL_AID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>