LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/COLL_SR_NO__c.field-meta.xml
<CustomField>
    <fullName>COLL_SR_NO__c</fullName>
    <description>COLL_SR_NO</description>
    <externalDeveloperName>COLL_SR_NO</externalDeveloperName>
    <label>COLL_SR_NO</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>