LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/COST_CODE__c.field-meta.xml
<CustomField>
    <fullName>COST_CODE__c</fullName>
    <description>COST_CODE</description>
    <externalDeveloperName>COST_CODE</externalDeveloperName>
    <label>COST_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>