LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/ENTRY_BY__c.field-meta.xml
<CustomField>
    <fullName>ENTRY_BY__c</fullName>
    <description>ENTRY_BY</description>
    <externalDeveloperName>ENTRY_BY</externalDeveloperName>
    <label>ENTRY_BY</label>
    <length>2</length>
    <type>Text</type>
</CustomField>