LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/ISU_AID__c.field-meta.xml
<CustomField>
    <fullName>ISU_AID__c</fullName>
    <description>ISU_AID</description>
    <externalDeveloperName>ISU_AID</externalDeveloperName>
    <label>ISU_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>