LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/ITEM_AID__c.field-meta.xml
<CustomField>
    <fullName>ITEM_AID__c</fullName>
    <description>ITEM_AID</description>
    <externalDeveloperName>ITEM_AID</externalDeveloperName>
    <label>ITEM_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>