LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/ITEM_SR_NO__c.field-meta.xml
<CustomField>
    <fullName>ITEM_SR_NO__c</fullName>
    <description>ITEM_SR_NO</description>
    <externalDeveloperName>ITEM_SR_NO</externalDeveloperName>
    <label>ITEM_SR_NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>