LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/ON_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>ON_AMOUNT__c</fullName>
    <description>ON_AMOUNT</description>
    <externalDeveloperName>ON_AMOUNT</externalDeveloperName>
    <label>ON_AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>