LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/RATE__c.field-meta.xml
<CustomField>
    <fullName>RATE__c</fullName>
    <description>RATE</description>
    <externalDeveloperName>RATE</externalDeveloperName>
    <label>RATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>