LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/RU_AID__c.field-meta.xml
<CustomField>
    <fullName>RU_AID__c</fullName>
    <description>RU_AID</description>
    <externalDeveloperName>RU_AID</externalDeveloperName>
    <label>RU_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>