LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/RULE_AID__c.field-meta.xml
<CustomField>
    <fullName>RULE_AID__c</fullName>
    <description>RULE_AID</description>
    <externalDeveloperName>RULE_AID</externalDeveloperName>
    <label>RULE_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>