LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/TAX__c.field-meta.xml
<CustomField>
    <fullName>TAX__c</fullName>
    <description>TAX</description>
    <externalDeveloperName>TAX</externalDeveloperName>
    <label>TAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>