LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/TAX_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TAX_TYPE__c</fullName>
    <description>TAX_TYPE</description>
    <externalDeveloperName>TAX_TYPE</externalDeveloperName>
    <label>TAX_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>