LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/TRANS_AID__c.field-meta.xml
<CustomField>
    <fullName>TRANS_AID__c</fullName>
    <description>TRANS_AID</description>
    <externalDeveloperName>TRANS_AID</externalDeveloperName>
    <label>TRANS_AID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>