LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/TRANS_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TRANS_TYPE__c</fullName>
    <description>TRANS_TYPE</description>
    <externalDeveloperName>TRANS_TYPE</externalDeveloperName>
    <label>TRANS_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>