LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/TYPE_ADD_DEL__c.field-meta.xml
<CustomField>
    <fullName>TYPE_ADD_DEL__c</fullName>
    <description>TYPE_ADD_DEL</description>
    <externalDeveloperName>TYPE_ADD_DEL</externalDeveloperName>
    <label>TYPE_ADD_DEL</label>
    <length>8</length>
    <type>Text</type>
</CustomField>