LinKreta_POC_Repository/force-app/main/default/objects/AC_COLL_TAX_DT__x/fields/TYPE_DR_CR__c.field-meta.xml
<CustomField>
    <fullName>TYPE_DR_CR__c</fullName>
    <description>TYPE_DR_CR</description>
    <externalDeveloperName>TYPE_DR_CR</externalDeveloperName>
    <label>TYPE_DR_CR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>